@@ -1,0 +1,57 @@
+function r = tri2sphrad(tri, x)
+% TRI2SPHRAD  Estimate radius of sphere with same area as triangular mesh.
+%
+% R = TRI2SPHRAD(TRI, X)
+%
+%   The mesh is defined by (TRI, X).
+%
+%   TRI is a 3-column matrix with a surface mesh triangulation. Each row
+%   gives the indices of the three vertices of one triangle. The
+%   orientation of the triangles doesn't matter, as only unsigned areas
+%   will be computed.
+%
+%   X is a 3-column matrix with the coordinates of the mesh vertices. Each
+%   row gives the (x,y,z)-coordinates of one vertex.
+%
+%   R is the radius of a sphere with the same area as the triangular mesh.
+
+% Author: Ramon Casero <rcasero@gmail.com>
+% Copyright © 2014 University of Oxford
+% Version: 0.1.0
+% $Rev$
+% $Date$
+%
+% University of Oxford means the Chancellor, Masters and Scholars of
+% the University of Oxford, having an administrative office at
+% Wellington Square, Oxford OX1 2JD, UK. 
+%
+% This file is part of Gerardus.
+%
+% This program is free software: you can redistribute it and/or modify
+% it under the terms of the GNU General Public License as published by
+% the Free Software Foundation, either version 3 of the License, or
+% (at your option) any later version.
+%
+% This program is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details. The offer of this
+% program under the terms of the License is subject to the License
+% being interpreted in accordance with English Law and subject to any
+% action against the University of Oxford being under the jurisdiction
+% of the English Courts.
+%
+% You should have received a copy of the GNU General Public License
+% along with this program.  If not, see
+% <http://www.gnu.org/licenses/>.
+
+% check arguments
+narginchk(2, 2);
+nargoutchk(0, 1);
+
+% compute area of all mesh triangles
+a = cgal_trifacet_area(tri, x);
+atot = sum(a);
+
+% estimate radius of parameterization sphere
+r = sqrt(atot/4/pi);
